# salut

./: Cargo.toml  README.md  greetings.json
.github/workflows/: cicd.yml  rust.yml
src/: main.rs
