[package]
name = "salut"
version = "0.1.0"
edition = "2021"
authors = ["Amine Zaine <amine250@example.com>"]
description = "A multilingual greeting CLI tool with profanity levels"
license = "MIT"
keywords = ["cli", "greeting", "multilingual"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"